--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Itsge Art</title>
+    <title>Nmae Here</title>
     <style>
         body {
             background-color: #5D5557;
@@ -28,5 +28,6 @@
 </body>
 
 </html>
+
 
 
